switched 'build' and 'start' scripts to see if that would help with heroku deployment.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server -d",
-    "build": "cross-env NODE_ENV=production webpack -p",
+    "start": "cross-env NODE_ENV=production webpack -p",
+    "build": "cross-env NODE_ENV=development webpack-dev-server -d",
     "test": "jest"
   },
   "keywords": [],
