--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production webpack -p",
-    "build": "cross-env NODE_ENV=development webpack-dev-server -d",
+    "start": "NODE_ENV=development webpack-dev-server -d",
+    "build": "NODE_ENV=production webpack -p",
     "test": "jest"
   },
   "keywords": [],
