--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production webpack -p",
+    "start": "NODE_ENV=development webpack-dev-server -d",
     "build": "NODE_ENV=production webpack -p",
     "test": "jest"
   },
